--- a/MES/Views/QualityRequestDetailView.xaml
+++ b/MES/Views/QualityRequestDetailView.xaml
@@ -1,108 +1,61 @@
-﻿<UserControl
-    x:Class="MesAdmin.Views.QualityRequestDetailView"
-    xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"  
-    xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" 
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-    xmlns:dxgt="http://schemas.devexpress.com/winfx/2008/xaml/grid/themekeys"
-    xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
-    xmlns:ViewModels="clr-namespace:MesAdmin.ViewModels"
-    xmlns:common="clr-namespace:MesAdmin.Common.Common"
-    xmlns:custom="clr-namespace:MesAdmin.Common.CustomControl"
-    xmlns:utils="clr-namespace:MesAdmin.Common.Utils"
-    xmlns:local="clr-namespace:MesAdmin"
-    mc:Ignorable="d"
-    xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
-    xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
-    xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
-    xmlns:dxci="http://schemas.devexpress.com/winfx/2008/xaml/core/internal"             
-    d:DesignHeight="436" 
-    d:DesignWidth="800"
-    xmlns:view="clr-namespace:MesAdmin.Views">
-
+﻿<UserControl x:Class="MesAdmin.Views.QualityRequestDetailView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
+             xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+             xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
+             xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
+             xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
+             xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:common="clr-namespace:MesAdmin.Common.Common"
+             xmlns:custom="clr-namespace:MesAdmin.Common.CustomControl"
+             mc:Ignorable="d"
+             d:DesignHeight="436"
+             d:DesignWidth="800">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/Resources/Dictionary/GridRowIndicatorState.xaml" />
+                <ResourceDictionary Source="/Resources/Dictionary/GridRowIndicator.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
-    
     <Grid>
         <dxb:BarManager>
             <DockPanel>
                 <dxr:RibbonControl DockPanel.Dock="Top">
                     <dxr:RibbonDefaultPageCategory Caption="defaultCategory">
                         <dxr:RibbonPage Caption="Home">
+                            <!--#region Find-->
                             <dxr:RibbonPageGroup Caption="Find">
-                                <dxb:BarStaticItem>
-                                    <dxb:BarStaticItem.ContentTemplate>
-                                        <DataTemplate>
-                                            <StackPanel Orientation="Horizontal" Margin="0 5 0 0">
-                                                <dxmvvm:Interaction.Behaviors>
-                                                    <dxmvvm:KeyToCommand KeyGesture="F5" Command="{Binding DataContext.SearchCmd, RelativeSource={RelativeSource AncestorType=dxb:LightweightBarItemLinkControl}}"/>
-                                                    <dxmvvm:KeyToCommand KeyGesture="Enter" Command="{Binding DataContext.SearchCmd, RelativeSource={RelativeSource AncestorType=dxb:LightweightBarItemLinkControl}}"/>
-                                                </dxmvvm:Interaction.Behaviors>
-                                                <StackPanel Orientation="Vertical">
-                                                    <StackPanel Orientation="Horizontal">
-                                                        <TextBlock Text="Start Date(검사요청일) : " Width="135" TextAlignment="Right" FontStyle="Italic" Foreground="Gray"/>
-                                                        <dxe:DateEdit 
-                                                            Background="White"
-                                                            Width="150"
-                                                            ShowClearButton="False"
-                                                            EditValue="{Binding DataContext.StartDate, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource AncestorType=dxb:LightweightBarItemLinkControl}}">
-                                                        </dxe:DateEdit>
-                                                    </StackPanel>
-                                                    <StackPanel Orientation="Horizontal" Margin="0 2 0 0">
-                                                        <TextBlock Text="End Date(검사요청일) : " Width="135" TextAlignment="Right" FontStyle="Italic" Foreground="Gray"/>
-                                                        <dxe:DateEdit
-                                                            Background="White" 
-                                                            Width="150"
-                                                            ShowClearButton="False"
-                                                            EditValue="{Binding DataContext.EndDate, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource AncestorType=dxb:LightweightBarItemLinkControl}}">
-                                                        </dxe:DateEdit>
-                                                    </StackPanel>
-                                                </StackPanel>
-                                                <!--<StackPanel Orientation="Vertical" Margin="5 0 0 0" Visibility="{Binding DataContext.Visibility, RelativeSource={RelativeSource AncestorType=dxb:LightweightBarItemLinkControl}}">
-                                                    <dxg:LookUpEdit
-                                                        NullText="공급처"
-                                                        ItemsSource="{Binding DataContext.BizPartnerList, RelativeSource={RelativeSource AncestorType=dxb:LightweightBarItemLinkControl}}" 
-                                                        EditValue="{Binding DataContext.BizCode, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource AncestorType=dxb:LightweightBarItemLinkControl}}"
-                                                        DisplayMember="BizName"
-                                                        ValueMember="BizCode"
-                                                        ShowSizeGrip="False"
-                                                        IsTextEditable="True"
-                                                        AutoComplete="False" FilterCondition="Contains"
-                                                        ImmediatePopup="True"
-                                                        AutoPopulateColumns="False"
-                                                        Background="White"
-                                                        Width="150"
-                                                        NullValueButtonPlacement="EditBox"
-                                                        PopupContentTemplate="{StaticResource SearchBizTemplate}">
-                                                    </dxg:LookUpEdit>
-                                                </StackPanel>-->
-                                                <StackPanel Orientation="Vertical" Margin="5 0 0 0">
-                                                    <dxe:ComboBoxEdit
-                                                        Width="180"
-                                                        NullText="공장정보"
-                                                        NullValueButtonPlacement="EditBox"
-                                                        Background="White"
-                                                        ItemsSource="{Binding DataContext.BizAreaCode, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource AncestorType=dxb:LightweightBarItemLinkControl}}"
-                                                        EditValue="{Binding DataContext.EditBizAreaCode, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource AncestorType=dxb:LightweightBarItemLinkControl}}"
-                                                        ValueMember="MinorCode"
-                                                        DisplayMember="MinorName" />
-                                                </StackPanel>
-                                            </StackPanel>
-                                        </DataTemplate>
-                                    </dxb:BarStaticItem.ContentTemplate>
-                                </dxb:BarStaticItem>
+                                <dxb:BarEditItem
+                                    Content="Start Date(검사요청일) : "
+                                    EditValue="{Binding StartDate, UpdateSourceTrigger=PropertyChanged}"
+                                    Margin="0 5 0 0"
+                                    EditTemplate="{StaticResource SearchDate}"
+                                    ContentTemplate="{StaticResource ItalicGray}"
+                                    EditWidth="150"/>
+                                <dxb:BarEditItem
+                                    Content=" End Date(검사요청일) : "
+                                    EditValue="{Binding EndDate, UpdateSourceTrigger=PropertyChanged}"
+                                    Margin="0 2 0 0"
+                                    EditTemplate="{StaticResource SearchDate}"
+                                    ContentTemplate="{StaticResource ItalicGray}"
+                                    EditWidth="150"/>
+                                <dxb:BarEditItem
+                                    EditValue="{Binding BizAreaCode, UpdateSourceTrigger=PropertyChanged}"
+                                    EditWidth="180"
+                                    Margin="0 5 0 0"
+                                    EditTemplate="{StaticResource BizAreaCode}" />
                             </dxr:RibbonPageGroup>
+                            <!--#endregion-->
+                            <!--#region Task-->
                             <dxr:RibbonPageGroup>
                                 <dxb:BarButtonItem Content="검사등록 보기" KeyGesture="CTRL+M" Command="{Binding MouseDoubleClickCmd}" CommandParameter="{Binding ElementName=GridControl, Path=SelectedItem}" LargeGlyph="{dx:DXImage SvgImages/XAF/Action_Edit.svg}" />
                                 <dxb:BarButtonItem Content="검색" KeyGesture="F5" Command="{Binding SearchCmd}" LargeGlyph="{dx:DXImage SvgImages/Spreadsheet/Zoom.svg}" />
                             </dxr:RibbonPageGroup>
+                            <!--#endregion-->
                         </dxr:RibbonPage>
                     </dxr:RibbonDefaultPageCategory>
                 </dxr:RibbonControl>
