--- a/MES/Views/Site/QualityElementRequestListView.xaml
+++ b/MES/Views/Site/QualityElementRequestListView.xaml
@@ -1,31 +1,22 @@
-﻿<UserControl
-    x:Class="MesAdmin.Views.QualityElementRequestListView"
-    xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"  
-    xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" 
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-    xmlns:dxgt="http://schemas.devexpress.com/winfx/2008/xaml/grid/themekeys"
-    xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
-    xmlns:ViewModels="clr-namespace:MesAdmin.ViewModels"
-    xmlns:common="clr-namespace:MesAdmin.Common.Common"
-    xmlns:custom="clr-namespace:MesAdmin.Common.CustomControl"
-    xmlns:utils="clr-namespace:MesAdmin.Common.Utils"
-    xmlns:local="clr-namespace:MesAdmin"
-    mc:Ignorable="d"
-    xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
-    xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
-    xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
-    xmlns:dxci="http://schemas.devexpress.com/winfx/2008/xaml/core/internal"             
-    d:DesignHeight="436" 
-    d:DesignWidth="800"
-    xmlns:view="clr-namespace:MesAdmin.Views">
-
+﻿<UserControl x:Class="MesAdmin.Views.QualityElementRequestListView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
+             xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+             xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
+             xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
+             xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:common="clr-namespace:MesAdmin.Common.Common"
+             xmlns:custom="clr-namespace:MesAdmin.Common.CustomControl"
+             xmlns:ViewModels="clr-namespace:MesAdmin.ViewModels"
+             mc:Ignorable="d"
+             d:DesignHeight="436"
+             d:DesignWidth="800">
     <UserControl.DataContext>
         <ViewModels:QualityElementRequestListVM />
     </UserControl.DataContext>
-
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -56,38 +47,20 @@
                                 <dxb:BarButtonItem Content="검색" KeyGesture="F5" Command="{Binding SearchCmd}" LargeGlyph="{dx:DXImage SvgImages/Spreadsheet/Zoom.svg}" />
                             </dxr:RibbonPageGroup>
                             <dxr:RibbonPageGroup Caption="Find">
-                                <dxb:BarStaticItem>
-                                    <dxb:BarStaticItem.ContentTemplate>
-                                        <DataTemplate>
-                                            <StackPanel Orientation="Horizontal" Margin="0 5 0 0">
-                                                <dxmvvm:Interaction.Behaviors>
-                                                    <dxmvvm:KeyToCommand KeyGesture="F5" Command="{Binding DataContext.SearchCmd, RelativeSource={RelativeSource AncestorType=dxb:LightweightBarItemLinkControl}}"/>
-                                                    <dxmvvm:KeyToCommand KeyGesture="Enter" Command="{Binding DataContext.SearchCmd, RelativeSource={RelativeSource AncestorType=dxb:LightweightBarItemLinkControl}}"/>
-                                                </dxmvvm:Interaction.Behaviors>
-                                                <StackPanel Orientation="Vertical">
-                                                    <StackPanel Orientation="Horizontal">
-                                                        <TextBlock Text="Start Date(제조일) : " Width="110" TextAlignment="Right" FontStyle="Italic" Foreground="Gray"/>
-                                                        <dxe:DateEdit 
-                                                            Background="White"
-                                                            Width="150"
-                                                            ShowClearButton="False"
-                                                            EditValue="{Binding DataContext.StartDate, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource AncestorType=dxb:LightweightBarItemLinkControl}}">
-                                                        </dxe:DateEdit>
-                                                    </StackPanel>
-                                                    <StackPanel Orientation="Horizontal" Margin="0 2 0 0">
-                                                        <TextBlock Text="End Date(제조일) : " Width="110" TextAlignment="Right" FontStyle="Italic" Foreground="Gray"/>
-                                                        <dxe:DateEdit
-                                                            Background="White" 
-                                                            Width="150"
-                                                            ShowClearButton="False"
-                                                            EditValue="{Binding DataContext.EndDate, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource AncestorType=dxb:LightweightBarItemLinkControl}}">
-                                                        </dxe:DateEdit>
-                                                    </StackPanel>
-                                                </StackPanel>
-                                            </StackPanel>
-                                        </DataTemplate>
-                                    </dxb:BarStaticItem.ContentTemplate>
-                                </dxb:BarStaticItem>
+                                <dxb:BarEditItem
+                                    Content="Start Date(제조일) : "
+                                    EditValue="{Binding StartDate, UpdateSourceTrigger=PropertyChanged}"
+                                    Margin="0 5 0 0"
+                                    EditTemplate="{StaticResource SearchDate}"
+                                    ContentTemplate="{StaticResource ItalicGray}"
+                                    EditWidth="150"/>
+                                <dxb:BarEditItem
+                                    Content=" End Date(제조일) : "
+                                    EditValue="{Binding EndDate, UpdateSourceTrigger=PropertyChanged}"
+                                    Margin="0 2 0 0"
+                                    EditTemplate="{StaticResource SearchDate}"
+                                    ContentTemplate="{StaticResource ItalicGray}"
+                                    EditWidth="150"/>
                             </dxr:RibbonPageGroup>
                         </dxr:RibbonPage>
                     </dxr:RibbonDefaultPageCategory>
