--- a/MES/Views/CommonEquipmentView.xaml
+++ b/MES/Views/CommonEquipmentView.xaml
@@ -1,44 +1,26 @@
 ﻿<UserControl x:Class="MesAdmin.Views.CommonEquipmentView"
-    xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"  
-    xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" 
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-    xmlns:dxgt="http://schemas.devexpress.com/winfx/2008/xaml/grid/themekeys"
-    xmlns:ViewModels="clr-namespace:MesAdmin.ViewModels"
-    xmlns:view="clr-namespace:MesAdmin.Views"             
-    xmlns:utils="clr-namespace:MesAdmin.Common.Utils"
-    xmlns:local="clr-namespace:MesAdmin"
-    mc:Ignorable="d"
-    xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
-    xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
-    xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
-    xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
-    d:DesignHeight="436" 
-    d:DesignWidth="800"
-    xmlns:common="clr-namespace:MesAdmin.Common.Common"
-    xmlns:custom="clr-namespace:MesAdmin.Common.CustomControl"             
-    DataContext="{dxmvvm:ViewModelSource Type=ViewModels:CommonEquipmentVM}">
-
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
+             xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+             xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
+             xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
+             xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
+             xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:common="clr-namespace:MesAdmin.Common.Common"
+             xmlns:custom="clr-namespace:MesAdmin.Common.CustomControl"
+             xmlns:utils="clr-namespace:MesAdmin.Common.Utils"
+             xmlns:ViewModels="clr-namespace:MesAdmin.ViewModels"
+             mc:Ignorable="d"
+             d:DesignHeight="436"
+             d:DesignWidth="800"
+             DataContext="{dxmvvm:ViewModelSource Type=ViewModels:CommonEquipmentVM}">
     <UserControl.Resources>
         <ResourceDictionary>
             <utils:MinorCodeConverter x:Key="MinorCodeConverter"/>
             <utils:WaCodeConverter x:Key="WaCodeConverter"/>
-            <DataTemplate x:Key="BizAreaCode">
-                <dxg:LookUpEdit
-                Name="PART_Editor"
-                ItemsSource="{Binding View.DataContext.BizAreaCode}"
-                ValueMember="MinorCode"
-                DisplayMember="MinorName"
-                EditValue="{Binding RowData.Row.BizAreaCode}"
-                ShowSizeGrip="False"
-                IsTextEditable="False"
-                AutoPopulateColumns="False"
-                InvalidValueBehavior="AllowLeaveEditor"
-                IsPopupAutoWidth="False"
-                PopupContentTemplate="{StaticResource BizAreaCodeTemplate}"/>
-            </DataTemplate>
             <DataTemplate x:Key="WaCode">
                 <dxg:LookUpEdit
                 Name="PART_Editor"
@@ -127,7 +109,7 @@
                                                         NullText="공장정보"
                                                         NullValueButtonPlacement="EditBox"
                                                         Background="White"
-                                                        ItemsSource="{Binding DataContext.BizAreaCode, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource AncestorType=dxb:LightweightBarItemLinkControl}}"
+                                                        ItemsSource="{Binding DataContext.BizAreaCodeList, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource AncestorType=dxb:LightweightBarItemLinkControl}}"
                                                         EditValue="{Binding DataContext.EditBizAreaCode, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource AncestorType=dxb:LightweightBarItemLinkControl}}"
                                                         ValueMember="MinorCode"
                                                         DisplayMember="MinorName" />
@@ -178,9 +160,16 @@
                         <dxg:GridColumn 
                             Header="공장정보" 
                             FieldName="BizAreaCode"
-                            CellTemplate="{StaticResource BizAreaCode}"
                             Width="120" 
-                            FixedWidth="True" />
+                            FixedWidth="True">
+                            <dxg:GridColumn.EditSettings>
+                                <dxe:ComboBoxEditSettings
+                                ItemsSource="{Binding BizAreaCodeList}"
+                                DisplayMember="MinorName"
+                                ValueMember="MinorCode"
+                                ShowSizeGrip="False" />
+                            </dxg:GridColumn.EditSettings>
+                        </dxg:GridColumn>
                         <dxg:GridColumn 
                             FieldName="EqpCode" 
                             Header="설비코드"
