--- a/MES/Views/CommonProcInfoView.xaml
+++ b/MES/Views/CommonProcInfoView.xaml
@@ -1,41 +1,26 @@
 ﻿<UserControl x:Class="MesAdmin.Views.CommonProcInfoView"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
-    xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
-    xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
-    xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
-    xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
-    xmlns:view="clr-namespace:MesAdmin.Views"             
-    xmlns:ViewModels="clr-namespace:MesAdmin.ViewModels"
-    xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"             
-    mc:Ignorable="d"
-    xmlns:utils="clr-namespace:MesAdmin.Common.Utils"
-    xmlns:common="clr-namespace:MesAdmin.Common.Common"
-    xmlns:custom="clr-namespace:MesAdmin.Common.CustomControl"
-    d:DesignHeight="600" d:DesignWidth="600">
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
+             xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+             xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
+             xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
+             xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
+             xmlns:dxr="http://schemas.devexpress.com/winfx/2008/xaml/ribbon"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:common="clr-namespace:MesAdmin.Common.Common"
+             xmlns:custom="clr-namespace:MesAdmin.Common.CustomControl"
+             xmlns:utils="clr-namespace:MesAdmin.Common.Utils"
+             xmlns:ViewModels="clr-namespace:MesAdmin.ViewModels"
+             mc:Ignorable="d"
+             d:DesignHeight="600" d:DesignWidth="600">
     <UserControl.DataContext>
         <ViewModels:CommonProcInfoVM/>
     </UserControl.DataContext>
     
     <UserControl.Resources>
         <ResourceDictionary>
-            <DataTemplate x:Key="BizAreaCode">
-                <dxg:LookUpEdit
-                Name="PART_Editor"
-                ItemsSource="{Binding View.DataContext.BizAreaCode}"
-                ValueMember="MinorCode"
-                DisplayMember="MinorName"
-                EditValue="{Binding RowData.Row.BizAreaCode}"
-                ShowSizeGrip="False"
-                IsTextEditable="False"
-                AutoPopulateColumns="False"
-                InvalidValueBehavior="AllowLeaveEditor"
-                IsPopupAutoWidth="False"
-                PopupContentTemplate="{StaticResource BizAreaCodeTemplate}"/>
-            </DataTemplate>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Resources/Dictionary/GridRowIndicatorState.xaml" />
             </ResourceDictionary.MergedDictionaries>
@@ -75,7 +60,7 @@
                                                 Background="White"
                                                 NullText="공장정보"
                                                 NullValueButtonPlacement="EditBox"
-                                                ItemsSource="{Binding DataContext.BizAreaCode, RelativeSource={RelativeSource AncestorType=dxb:LightweightBarItemLinkControl}}"
+                                                ItemsSource="{Binding DataContext.BizAreaCodeList, RelativeSource={RelativeSource AncestorType=dxb:LightweightBarItemLinkControl}}"
                                                 EditValue="{Binding DataContext.EditBizAreaCode, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource AncestorType=dxb:LightweightBarItemLinkControl}}"
                                                 DisplayMember="MinorName">
                                                 <dxe:ComboBoxEdit.InputBindings>
@@ -122,8 +107,15 @@
                 </dxg:GridControl.View>
                 <dxg:GridControl.Columns>
                     <dxg:GridColumn 
-                        FieldName="BizAreaCode" CellTemplate="{StaticResource BizAreaCode}"
+                        FieldName="BizAreaCode"
                         Header="공장정보">
+                        <dxg:GridColumn.EditSettings>
+                            <dxe:ComboBoxEditSettings
+                                ItemsSource="{Binding BizAreaCodeList}"
+                                DisplayMember="MinorName"
+                                ValueMember="MinorCode"
+                                ShowSizeGrip="False" />
+                        </dxg:GridColumn.EditSettings>
                     </dxg:GridColumn>
                     <dxg:GridColumn FieldName="WaCode" Header="공정 코드"  />
                     <dxg:GridColumn FieldName="WaName" Header="공정명"/>
